--- a/web/index.html
+++ b/web/index.html
@@ -78,8 +78,11 @@
 
 			//Calculte averages
 			function getAverageForData(dataArray){
-				let earliestRecord = dataArray[0];
 				let recordCount = dataArray.length;
+				if(recordCount < 1){
+					return 0;
+				}
+				let earliestRecord = dataArray[0];
 				let totalGramsOfAlcohol = 0;
 				for(let i = 0; i < recordCount; i += 1){
 					if(earliestRecord.timestamp > dataArray[i].timestamp){
@@ -87,8 +90,7 @@
 					}
 					totalGramsOfAlcohol += dataArray[i].gramsOfAlcohol;
 				}
-				let today = new Date();
-				let daysSinceEarliestRecord = Math.ceil((today.getTime() - earliestRecord.timestamp) / 86400000);
+				let daysSinceEarliestRecord = Math.ceil((getCurrentDate().getTime() - earliestRecord.timestamp) / 86400000);
 				let totalStandardDrinks = totalGramsOfAlcohol / gramsOfAlcoholInStandardDrink;
 				return Math.round((totalStandardDrinks/daysSinceEarliestRecord) * 7);
 			}
@@ -104,7 +106,7 @@
 			}
 
 			//Calculate 7-day average
-			let date7DaysAgo = new Date();
+			let date7DaysAgo = getCurrentDate();
 			date7DaysAgo.setDate(date7DaysAgo.getDate() - 7);
 			let trimmed7DayData = rawData.filter(function(value){
 				return value.timestamp > date7DaysAgo.getTime();
@@ -114,7 +116,7 @@
 			document.getElementById('average_7_days_value').innerHTML = average7Day;
 
 			//Calculate 30-day average
-			let date30DaysAgo = new Date();
+			let date30DaysAgo = getCurrentDate();
 			date30DaysAgo.setDate(date30DaysAgo.getDate() - 30);
 			let trimmed30DayData = rawData.filter(function(value){
 				return value.timestamp > date30DaysAgo.getTime();
@@ -135,13 +137,21 @@
 			document.getElementById('main_heading').innerHTML = errorMessage;
 		}
 
+		function getCurrentDate(){
+			//Set specific date for demo data
+			if(window.userId == 'demo'){
+				return new Date('March 18, 2019 00:00:00');
+			}
+			return new Date();
+		}
+
 		let gramsOfAlcoholInStandardDrink = 14;
 		let goalOn = 10;
 		let goalHigh = goalOn * 2;
 				
 		function init(){
 			let urlParams = new URLSearchParams(window.location.search);
-			let userId = urlParams.get('user');
+			window.userId = urlParams.get('user');
 
 			if(userId){
 				fetch('https://dpgfzar9we.execute-api.us-east-1.amazonaws.com/prod/drinks?userId='+userId, {
